--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -6,9 +6,13 @@
   height: 50px;
   background-color: rgba(0, 150, 136,.9);
   .logo{
-    line-height: 50px;
+    margin-left: 1rem;
+    width: 100px;
+    height: 50px;
     font-size: 1.5rem;
     color: #f0f0f0;
+    background: url(../img/logo.png) center no-repeat;
+    background-size: contain;
   }
 }
 .nav-tab{
