--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -31,7 +31,7 @@
     width: 100%;
     height: 3rem;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1rem;
     line-height: 3rem;
     transition: all .2s linear;
     &:hover{
@@ -43,7 +43,8 @@
   position: absolute;
   top: 50px;
   left: 200px;
-  padding: 2rem 1rem;
+  right:0;
+  overflow: hidden;
 }
 .btn{
   margin:5px;
@@ -56,4 +57,9 @@
   color:#fff;
   box-shadow: 0 0 1px #000;
   cursor:pointer;
+}
+.main{
+  clear:both;
+  padding:2rem 1rem;
+  box-sizing: border-box;
 }
