--- a/src/assets/css/main.less
+++ b/src/assets/css/main.less
@@ -1,3 +1,32 @@
+form{
+  border:1px solid #000;
+  width:200px;
+  padding:20px;
+}
+input{
+  margin:5px;
+  padding:5px;
+  background:lightyellow;
+  border:.1px solid #000;
+}
+input[type="button"],button,.btn{
+  margin:5px;
+  padding:5px;
+  height:30px;
+  width:auto;
+  border:none;
+  background:#333;
+  border-radius:3px;
+  color:#fff;
+  box-shadow: 0 0 1px #000;
+  cursor:pointer;
+}
+input[type="button"]:disabled,button:disabled{
+  background:#eee;
+  color:#808080;
+  cursor:default;
+}
+
 .header{
   position: fixed;
   top: 0;
@@ -29,12 +58,12 @@
     color: #fff;
     display: inline-block;
     width: 100%;
-    height: 3rem;
+    height: 2.5rem;
     text-align: center;
     font-size: 1rem;
-    line-height: 3rem;
+    line-height: 2.5rem;
     transition: all .2s linear;
-    &:hover{
+    &:hover,&.active{
       background-color: #009688;
     }
   }
@@ -45,18 +74,6 @@
   left: 200px;
   right:0;
   overflow: hidden;
-}
-.btn{
-  margin:5px;
-  padding:5px;
-  height:30px;
-  width:auto;
-  border:none;
-  background:#333;
-  border-radius:3px;
-  color:#fff;
-  box-shadow: 0 0 1px #000;
-  cursor:pointer;
 }
 .main{
   clear:both;
