--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -3,7 +3,7 @@
  * @Date: 2018-10-30 15:49:46 
  * @Desc: 样式重置
  * @Last Modified by: wuhao
- * @Last Modified time: 2018-11-13 14:33:41
+ * @Last Modified time: 2018-11-26 13:38:56
  */
 @charset "utf-8";
 /* CSS Document */
@@ -61,26 +61,6 @@ h1,
 h2,
 h3 {
   font-weight: bold;
-}
-
-h1 {
-  font-size: 25px;
-}
-
-h2,
-h3 {
-  font-size: 14px;
-}
-
-h4,
-h5 {
-  font-size: 12px;
-  font-weight: weight;
-}
-
-h6 {
-  font-size: 12px;
-  font-weight: normal;
 }
 
 table {
@@ -148,6 +128,10 @@ a:active {
 html {
   font-size: 12px;
 }
+html * {
+  padding: 0;
+  margin: 0;
+}
 
 /*>=900的设备*/
 
@@ -206,26 +190,27 @@ textarea:-ms-input-placeholder {
 /*color 样式*/
 
 @noteColor: #999;
-/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 
-::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-  background-color: #F5F5F5;
-}
+// /*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/
 
-/*定义滚动条轨道 内阴影+圆角*/
+// ::-webkit-scrollbar {
+//   width: 5px;
+//   height: 5px;
+//   background-color: #F5F5F5;
+// }
 
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px #999;
-  border-radius: 3px;
-  background-color: #F5F5F5;
-}
+// /*定义滚动条轨道 内阴影+圆角*/
 
-/*定义滑块 内阴影+圆角*/
+// ::-webkit-scrollbar-track {
+//   box-shadow: inset 0 0 5px #999;
+//   border-radius: 3px;
+//   background-color: #F5F5F5;
+// }
 
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  box-shadow: inset 0 0 5px #666;
-  background-color: #555;
-}
+// /*定义滑块 内阴影+圆角*/
+
+// ::-webkit-scrollbar-thumb {
+//   border-radius: 3px;
+//   box-shadow: inset 0 0 5px #666;
+//   background-color: #555;
+// }
