--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,27 +1,20 @@
+@charset 'UTF-8';
+@import './element.scss';
 form{
   border:1px solid #000;
   width:200px;
   padding:20px;
 }
 input{
-  margin:5px;
-  padding:5px;
-  background:lightyellow;
+  @include input;
   border:.1px solid #000;
 }
 input[type="button"],button,.btn{
-  margin:5px;
-  padding:5px;
-  height:30px;
-  width:auto;
-  border:none;
-  background:#333;
-  border-radius:3px;
-  color:#fff;
-  box-shadow: 0 0 1px #000;
+  @include btn;
   cursor:pointer;
 }
 input[type="button"]:disabled,button:disabled{
+  @include btn;
   background:#eee;
   color:#808080;
   cursor:default;
